--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto desenvolvido para gerenciar perguntas realizadas por usúarios anônimos.",
   "main": "src/server.js",
   "scripts": {
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.js",
+    "init-db": "node src/db/init.js"
   },
   "repository": {
     "type": "git",
